--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="344dp"
-    android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -26,10 +26,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/small_image"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="16dp"
-
                     android:src="@drawable/news_icon">
 
 
@@ -63,8 +63,11 @@
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/mainimage"
                 android:layout_width="344dp"
                 android:layout_height="194dp"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
                 android:src="@drawable/sample_image"></ImageView>
 
             <LinearLayout
@@ -74,6 +77,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/small_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -90,12 +94,14 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/fav_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="8dp"
                         android:src="@drawable/ic_favorite_border_black_24dp"></ImageView>
 
                     <ImageView
+                        android:id="@+id/share_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_share_black_24dp"></ImageView>
